--- a/2.Classification.ipynb
+++ b/2.Classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNoqUBAgOrXi25eXUOA7hGh",
+      "authorship_tag": "ABX9TyMASurA7eIr4TKlAV75Qqy6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,39 @@
       "outputs": [],
       "source": [
         "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://github.com/biranchi2018/Intro_to_ML/blob/main/Iris.csv"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FSMWTjuWQAkP",
+        "outputId": "7d7ebd37-fa84-4630-b6d0-eb2a83169b2b"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-06-18 06:45:16--  https://github.com/biranchi2018/Intro_to_ML/blob/main/Iris.csv\n",
+            "Resolving github.com (github.com)... 192.30.255.112\n",
+            "Connecting to github.com (github.com)|192.30.255.112|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘Iris.csv.1’\n",
+            "\n",
+            "Iris.csv.1              [ <=>                ] 190.22K  --.-KB/s    in 0.03s   \n",
+            "\n",
+            "2023-06-18 06:45:17 (6.93 MB/s) - ‘Iris.csv.1’ saved [194789]\n",
+            "\n"
+          ]
+        }
       ]
     },
     {
