--- a/3.Clustering.ipynb
+++ b/3.Clustering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNy+VywGcFQDTOZH6z1fArg",
+      "authorship_tag": "ABX9TyOMT64I3PGx5v1kyWU842FB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "lhuC5CQKDRRO"
       },
@@ -36,7 +36,41 @@
       "source": [
         "import pandas as pd\n",
         "from sklearn.cluster import KMeans\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://github.com/biranchi2018/Intro_to_ML/blob/main/Iris.csv"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WbHVGvMYQHoK",
+        "outputId": "a853981c-2ea5-4629-efa1-e8a238a9f33c"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-06-18 06:45:38--  https://github.com/biranchi2018/Intro_to_ML/blob/main/Iris.csv\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘Iris.csv.1’\n",
+            "\n",
+            "Iris.csv.1              [ <=>                ] 190.22K  --.-KB/s    in 0.08s   \n",
+            "\n",
+            "2023-06-18 06:45:38 (2.36 MB/s) - ‘Iris.csv.1’ saved [194789]\n",
+            "\n"
+          ]
+        }
       ]
     },
     {
@@ -47,7 +81,7 @@
       "metadata": {
         "id": "XcjCtKG1DZcY"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +98,7 @@
         "id": "TZzhgLCqDd_U",
         "outputId": "afd857d4-a3d8-4f17-99c8-c5c3ef08b29a"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -247,7 +281,7 @@
       "metadata": {
         "id": "tHA3K9qLDgBm"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +297,7 @@
         "id": "7iE1Ikh4DkuV",
         "outputId": "c5cc37b8-1174-42af-905b-3bb9edb69a3c"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -434,17 +468,187 @@
         "                max_iter = 100,\n",
         "                n_init = 10,\n",
         "                random_state = 0)\n",
-        "y_kmeans = kmeans.fit_predict(df)\n",
+        "y_kmeans = kmeans.fit_predict(df)"
+      ],
+      "metadata": {
+        "id": "a83Buy0lDZql"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_kmeans[:10]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RLy4N-oyJixc",
+        "outputId": "c48ea410-f57f-4b92-c784-e0b040824650"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "f9mF2dpIKZ0n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_no_data_points = len(df)\n",
+        "total_no_data_points"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4xRURRprKaMp",
+        "outputId": "57b485d7-63fa-41a5-b1a2-ec6a92e928a9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "150"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unique_values_arr, counts_arr = np.unique(y_kmeans, return_counts=True)"
+      ],
+      "metadata": {
+        "id": "tF3svBnqJwrR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "unique_values_arr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MQHKEwv8Kf8f",
+        "outputId": "d746c468-5ad1-42a8-eda3-9070ecdf30bc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2], dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "counts_arr"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nibkAc2IKooi",
+        "outputId": "264d4d0e-86d4-4c27-c661-499158f9499d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([62, 50, 38])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for group, counts in zip(unique_values_arr, counts_arr):\n",
+        "  print(f'Group {group} : {counts}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mP3dIr7bKoy4",
+        "outputId": "3940ec36-5463-42d3-8e57-7a2589e870bf"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Group 0 : 62\n",
+            "Group 1 : 50\n",
+            "Group 2 : 38\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_Iyzimg0KgSM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "print(kmeans.cluster_centers_) #display cluster centers"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "a83Buy0lDZql",
-        "outputId": "0d62d924-4f33-41c7-fd82-84cf6acbc491"
+        "id": "pwoY_7RTJfYj",
+        "outputId": "2379ff56-d2f1-427f-f26d-80ead61dd624"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +679,7 @@
         "id": "HsB8AM8fDkEP",
         "outputId": "5d0b9f7b-e875-435b-c3af-4f145998327a"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -495,7 +699,7 @@
       "metadata": {
         "id": "u7TLuxLTED6T"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     }
   ]
