--- a/1.Regression.ipynb
+++ b/1.Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhK3I7klE7JFpnYVhKusbv",
+      "authorship_tag": "ABX9TyOGHcrUflxPYwXIpz2T5jF+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,39 @@
       "outputs": [],
       "source": [
         "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://github.com/biranchi2018/Intro_to_ML/blob/main/Housing.csv"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UlEVyyXgPyn-",
+        "outputId": "415756d4-3682-4fc1-bcb3-5513ac117965"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-06-18 06:44:29--  https://github.com/biranchi2018/Intro_to_ML/blob/main/Housing.csv\n",
+            "Resolving github.com (github.com)... 20.27.177.113\n",
+            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘Housing.csv.1’\n",
+            "\n",
+            "Housing.csv.1           [  <=>               ] 411.00K  1.66MB/s    in 0.2s    \n",
+            "\n",
+            "2023-06-18 06:44:29 (1.66 MB/s) - ‘Housing.csv.1’ saved [420863]\n",
+            "\n"
+          ]
+        }
       ]
     },
     {
@@ -288,9 +321,61 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "len(df)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IPKCPQAP_yt2",
+        "outputId": "545f340c-5ad9-44d9-dd81-63def7c0c1ba"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "545"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(df.columns)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wzYBIPd3BCDo",
+        "outputId": "fe18e735-288c-4e06-e8b9-663626deeddf"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "13"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "IPKCPQAP_yt2"
+        "id": "crZWYCOjBEu9"
       },
       "execution_count": null,
       "outputs": []
